--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql2": "^3.3.5",
+    "sequelize": "^6.32.0",
     "twig": "~0.10.3"
   }
 }
